# roger-reviewer

./: .gitignore  .rchignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TESTING.md  roger-reviewer-brain-dump.md  tools.md
.beads/: .gitignore  beads.db.pre_diagnose_bak  ci-failure-intake-state.json  config.yaml  issues.jsonl  issues.jsonl.pre_diagnose_bak
.github/: ci-failure-intake.json  copilot-instructions.md
.ntm/: config.toml  palette.md  personas.toml  rate_limits.json
.swarm-kit/: project.env
_exploration/: README.md
apps/cli/: Cargo.toml
docs/: AGENT_ACCESS_AND_IN_SESSION_OPERATION_CONTRACT.md  ALIEN_ARTEFACTS_FOR_ROGER_REVIEWER.md  ALIEN_WORKFLOWS_FOR_ROGER_REVIEWER.md  ARCHIVE_PLAN_FOR_FLYWHEEL_STACK_BOOTSTRAP.md  ATTENTION_EVENT_AND_NOTIFICATION_CONTRACT.md  AUTOMATED_E2E_BUDGET.json  BEADS_WORKSPACE_STATUS.md  BEAD_CREATION_INPUTS.md  BEAD_SEED_FOR_ROGER_REVIEWER.md  BR_TRUST_AUDIT_2026-03-31.md  BR_UPSTREAM_BUG_REPROS_2026-04-01.md  CALVER_RELEASE_VERSIONING_CONTRACT.md  CONFIGURATION_CAPABILITY_AND_DEFAULTING_CONTRACT.md  CORE_DOMAIN_SCHEMA_AND_FINDING_FINGERPRINT.md  CRITIQUE_ROUND_01_FOR_ROGER_REVIEWER.md  CRITIQUE_ROUND_02_FOR_ROGER_REVIEWER.md  CRITIQUE_ROUND_03_FOR_ROGER_REVIEWER.md  CRITIQUE_ROUND_03_SUPPLEMENT_FOR_ROGER_REVIEWER.md  DATA_MODEL_AND_STORAGE_CONTRACT.md  DEV_MACHINE_ONBOARDING.md  DOCS_TREE_INVENTORY_AND_CLEANUP_PLAN.md  E2E_BUDGET.json  EXECUTION_GOVERNANCE_AND_REPO_BOUNDARY.md  EXTENSION_PACKAGING_AND_RELEASE_CONTRACT.md  EXTREME_OPTIMIZATION_ROUND_01_DB_QUERY_AND_FETCH_PATH_ARTEFACT.md  (+62 more)
(+222 files in other folders)
